minor README change

--- a/README
+++ b/README
@@ -1,1 +1,3 @@
 This project is a inventory management system designed to help UIF and its partner organizations (1) identify what costumes and props are in their inventory, (2) locate those costumes and props, and (3) provide a means of reserving and tracking these costumes and props.
+
+This project was completed on July 15, 2011.
